--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           useVcpkgToolchainFile: true
           buildDirectory: '${{ runner.workspace }}/build'
-          cmakeBuildType: 'Release'
-          buildWithCMakeArgs: '--target install'
+          buildWithCMakeArgs: '--target install --config release'
       
       - uses: actions/upload-artifact@v2
         with:
@@ -103,8 +102,7 @@ jobs:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           useVcpkgToolchainFile: true
           buildDirectory: '${{ runner.workspace }}/build'
-          cmakeBuildType: 'Release'
-          buildWithCMakeArgs: '--target install'
+          buildWithCMakeArgs: '--target install --config release'
           
       - uses: actions/upload-artifact@v2
         with:
@@ -169,6 +167,7 @@ jobs:
         env:
           vcpkgResponseFile: ${{ github.workspace }}/cmake/vcpkg_windows_cuda.diff  
           CUDA_PATH: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0"
+          CUDA_PATH_V11_0: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0"
           CUDA_TOOLKIT_ROOT_DIR: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0"
           CUDACXX: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0\\bin\\nvcc.exe"
         uses: lukka/run-vcpkg@v2
@@ -180,6 +179,7 @@ jobs:
       - name: Build with CMake and Ninja
         env:
           CUDA_PATH: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0"
+          CUDA_PATH_V11_0: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0"
           CUDA_TOOLKIT_ROOT_DIR: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0"
           CUDACXX: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0\\bin\\nvcc.exe"
         uses: lukka/run-cmake@v2
